--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.normal_font:runner:1.0.2'
-    androidTestImplementation 'com.android.support.normal_font.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
+    implementation 'com.github.VaibhavLakhera:Circular-Progress-View:0.1.1'
 }
