--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
     implementation 'com.github.VaibhavLakhera:Circular-Progress-View:0.1.1'
+    implementation 'com.google.android.gms:play-services-maps:10.2.0'
 }
