--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
     implementation 'com.github.VaibhavLakhera:Circular-Progress-View:0.1.1'
     implementation 'com.google.android.gms:play-services-maps:10.2.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
 }
