--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,11 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.mikhaellopez:circularprogressbar:2.0.0'
     implementation 'com.github.VaibhavLakhera:Circular-Progress-View:0.1.1'
-    implementation 'com.google.android.gms:play-services-maps:10.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+
 }
 
