sign up / sign in complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ChangePasswordActivity" />
         <activity android:name=".DeleteAccountActivity" />
-        <activity android:name=".FindPasswordActivity" />
+        <activity android:name=".ForgotPasswordActivity" />
         <activity
             android:name=".HomeActivity"
             android:label=""
