chart + table complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
     package="com.example.jy.assistant">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application
         android:allowBackup="true"
@@ -15,9 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -49,8 +48,12 @@
         <activity android:name=".HeartRateHistoryActivity" />
         <activity android:name=".ChangeNowPwdActivity" />
         <activity android:name=".MyProfileActivity" />
-        <activity android:name=".AQI_IndexActivity"></activity>
-        <activity android:name=".DeviceListActivity" android:theme="@android:style/Theme.Holo.Dialog" android:label="@string/select_device"/>
+        <activity android:name=".AQI_IndexActivity" />
+        <activity
+            android:name=".DeviceListActivity"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Holo.Dialog" />
+        <activity android:name=".SensorListActivity"></activity>
     </application>
 
 </manifest>
